--- a/src/assets/scss/color.scss
+++ b/src/assets/scss/color.scss
@@ -5,18 +5,25 @@ $white: #ffffff;
 $black: #000000;
 
 // text color
-$jasmine: #ffe17d;
-$navajo-white: #ffe1a7;
+$sky_blue: #00e0ff;
+$gray: #c7c7c7;
+$tiffany: #49b7cd;
 
 // border color
-$orange-yellow: #f7c96c;
-$medium-champagne: #eadca8;
-$rose-pink: #ff77d9;
-$gold: #e5ce98;
+$orange: #ffc485;
+$blue: #046db1;
 
 // background color
 $smoky-black: #14070a;
+$box_shadow: #00000040;
 
 // rgba color
 $black-80: rgba(0, 0, 0, 0.8);
-$rose-pink-50: rgba(255, 119, 217, 0.5);
+$black-70: rgba(0, 0, 0, 0.7);
+$black-50: rgba(0, 0, 0, 0.5);
+$light-blue: rgb(0, 244, 255);
+$navy-blue-90: rgba(9, 48, 81, 0.9);
+$yellow: rgb(247, 237, 148);
+$light-yellow: rgb(251, 230, 186);
+$orangeRGB: rgb(239, 130, 21);
+$green-lake: rgba(0, 224, 255, 0.3);
