--- a/src/assets/scss/color.scss
+++ b/src/assets/scss/color.scss
@@ -16,6 +16,7 @@ $blue: #046db1;
 // background color
 $smoky-black: #14070a;
 $box_shadow: #00000040;
+$modal: #000000b3;
 
 // rgba color
 $black-80: rgba(0, 0, 0, 0.8);
