--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -76,6 +76,7 @@ a{
 .col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-10, .col-12 {
   display: flex;
   align-items: center;
+  height: 100%;
 //   flex: 1 1 100%;
 }
 // @include ipad-width {
